Update AppShield module to support Swift files and transition to pnpm workspaces. Modified podspec to include Swift source files and set Swift version. Updated CONTRIBUTING.md and example README to reflect pnpm usage. Refactored Android build.gradle for code generation paths and streamlined iOS module implementation. Comprehensive validation performed to ensure functionality across platforms.

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -57,8 +57,10 @@ android {
   sourceSets {
     main {
       java.srcDirs += [
-        "generated/java",
-        "generated/jni"
+        "build/generated/source/codegen/java"
+      ]
+      jniLibs.srcDirs += [
+        "build/generated/source/codegen/jniLibs"
       ]
     }
   }
