--- a/android/build.gradle
+++ b/android/build.gradle
@@ -76,4 +76,6 @@ def kotlin_version = getExtOrDefault("kotlinVersion")
 dependencies {
   implementation "com.facebook.react:react-android"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.1.0"
+  implementation "androidx.core:core-ktx:1.9.0"
 }
